--- a/poc_framework.html
+++ b/poc_framework.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Introduction - Solana Security Workshop</title>
+        <title>PoC Framework - Solana Security Workshop</title>
 
 
         <!-- Custom HTML head -->
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html" class="active"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="workshop.html"><strong aria-hidden="true">2.</strong> Workshop</a></li><li class="chapter-item expanded "><a href="setup.html"><strong aria-hidden="true">3.</strong> Setup</a></li><li class="chapter-item expanded "><a href="poc_framework.html"><strong aria-hidden="true">4.</strong> PoC Framework</a></li><li class="chapter-item expanded "><a href="level0-solution.html"><strong aria-hidden="true">5.</strong> Level 0 - A first vulnerability Solution</a></li><li class="chapter-item expanded "><a href="level1.html"><strong aria-hidden="true">6.</strong> Level 1 - Personal Vault</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level1-hint1.html"><strong aria-hidden="true">6.1.</strong> Hint 1</a></li><li class="chapter-item expanded "><a href="level1-hint2.html"><strong aria-hidden="true">6.2.</strong> Hint 2</a></li><li class="chapter-item expanded "><a href="level1-bug.html"><strong aria-hidden="true">6.3.</strong> Bug</a></li><li class="chapter-item expanded "><a href="level1-solution.html"><strong aria-hidden="true">6.4.</strong> Solution</a></li></ol></li><li class="chapter-item expanded "><a href="level2.html"><strong aria-hidden="true">7.</strong> Level 2 - Secure Personal Vault</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level2-solution.html"><strong aria-hidden="true">7.1.</strong> Solution</a></li></ol></li><li class="chapter-item expanded "><a href="level3.html"><strong aria-hidden="true">8.</strong> Level 3 - Tip Pool</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level2-hint1.html"><strong aria-hidden="true">8.1.</strong> Hint 1</a></li><li class="chapter-item expanded "><a href="level2-hint2.html"><strong aria-hidden="true">8.2.</strong> Hint 2</a></li><li class="chapter-item expanded "><a href="level3-solution.html"><strong aria-hidden="true">8.3.</strong> Solution</a></li></ol></li><li class="chapter-item expanded "><a href="level4.html"><strong aria-hidden="true">9.</strong> Level 4 - SPL-Token Vault</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level4-hint1.html"><strong aria-hidden="true">9.1.</strong> Hint 1</a></li><li class="chapter-item expanded "><a href="level4-hint2.html"><strong aria-hidden="true">9.2.</strong> Hint 2</a></li><li class="chapter-item expanded "><a href="level4-hint3.html"><strong aria-hidden="true">9.3.</strong> Hint 3</a></li><li class="chapter-item expanded "><a href="level4-bug.html"><strong aria-hidden="true">9.4.</strong> Bug</a></li><li class="chapter-item expanded "><a href="level4-solution.html"><strong aria-hidden="true">9.5.</strong> Solution</a></li></ol></li><li class="chapter-item expanded "><a href="resources.html">Resources</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="workshop.html"><strong aria-hidden="true">2.</strong> Workshop</a></li><li class="chapter-item expanded "><a href="setup.html"><strong aria-hidden="true">3.</strong> Setup</a></li><li class="chapter-item expanded "><a href="poc_framework.html" class="active"><strong aria-hidden="true">4.</strong> PoC Framework</a></li><li class="chapter-item expanded "><a href="level0-solution.html"><strong aria-hidden="true">5.</strong> Level 0 - A first vulnerability Solution</a></li><li class="chapter-item expanded "><a href="level1.html"><strong aria-hidden="true">6.</strong> Level 1 - Personal Vault</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level1-hint1.html"><strong aria-hidden="true">6.1.</strong> Hint 1</a></li><li class="chapter-item expanded "><a href="level1-hint2.html"><strong aria-hidden="true">6.2.</strong> Hint 2</a></li><li class="chapter-item expanded "><a href="level1-bug.html"><strong aria-hidden="true">6.3.</strong> Bug</a></li><li class="chapter-item expanded "><a href="level1-solution.html"><strong aria-hidden="true">6.4.</strong> Solution</a></li></ol></li><li class="chapter-item expanded "><a href="level2.html"><strong aria-hidden="true">7.</strong> Level 2 - Secure Personal Vault</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level2-solution.html"><strong aria-hidden="true">7.1.</strong> Solution</a></li></ol></li><li class="chapter-item expanded "><a href="level3.html"><strong aria-hidden="true">8.</strong> Level 3 - Tip Pool</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level2-hint1.html"><strong aria-hidden="true">8.1.</strong> Hint 1</a></li><li class="chapter-item expanded "><a href="level2-hint2.html"><strong aria-hidden="true">8.2.</strong> Hint 2</a></li><li class="chapter-item expanded "><a href="level3-solution.html"><strong aria-hidden="true">8.3.</strong> Solution</a></li></ol></li><li class="chapter-item expanded "><a href="level4.html"><strong aria-hidden="true">9.</strong> Level 4 - SPL-Token Vault</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level4-hint1.html"><strong aria-hidden="true">9.1.</strong> Hint 1</a></li><li class="chapter-item expanded "><a href="level4-hint2.html"><strong aria-hidden="true">9.2.</strong> Hint 2</a></li><li class="chapter-item expanded "><a href="level4-hint3.html"><strong aria-hidden="true">9.3.</strong> Hint 3</a></li><li class="chapter-item expanded "><a href="level4-bug.html"><strong aria-hidden="true">9.4.</strong> Bug</a></li><li class="chapter-item expanded "><a href="level4-solution.html"><strong aria-hidden="true">9.5.</strong> Solution</a></li></ol></li><li class="chapter-item expanded "><a href="resources.html">Resources</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -145,30 +145,32 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
-<p>Welcome to the Solana Security Workshop!
-Here, we'll look at Solana Smart Contracts from an attacker's perspective.
-By learning how to find and exploit different types of issues, you'll be able to write more secure contracts as you'll know what to watch out for.</p>
-<p>In the first part of the course, we'll introduce concepts relevant to the security of Solana Contracts and explore one vulnerability in detail.
-After this part, we've prepared several smart contracts as challenges.
-Each of these will illustrate a different Solana smart contract bug.
-You're encouraged to work on exploiting these on your own. If you get stuck, please ask questions, we love to help. If you are attending remotely, this book will also provide some hints, which we recommend you read only if you don't progress yourself.</p>
-<p>Much code you'll see during this workshop is intentionally vulnerable. Even if the bugs are fixed, the code does not follow good design guidelines. Please do all of us a favor and not use it outside of security demonstrations.</p>
-<h2 id="requirements"><a class="header" href="#requirements">Requirements</a></h2>
-<p>To follow along with this course, you need to be familiar with writing solana contracts and the <a href="https://rust-lang.org/">Rust</a> programming language.</p>
-<p>You'll also need an environment where you can compile the example contracts and run the attacks.
-We have prepared remote environments if you need them, for details, see <a href="setup.html">Setup</a>.</p>
-<h2 id="who-we-are"><a class="header" href="#who-we-are">Who We Are</a></h2>
-<p>We started as a group of independent researchers, who love digging into complex concepts and projects. At the end of 2020 we have been introduced into the Solana ecosystem by looking at Solana-core code, in which we have found a number of vulnerabilities. We have since founded the security-research firm <a href="https://neodyme.io">Neodyme</a>, which has been helping the Solana Foundation with peer-reviews of smart contracts.</p>
-<p>As such, we have found lots of interesting and critical bugs in smart contracts.
-To help make the Ecosystem a more secure place, we want to share what we can in this short 3h workshop. We hope you enjoy breaking our prepared contracts as much as we do.</p>
+                        <h1 id="poc-framework"><a class="header" href="#poc-framework">PoC Framework</a></h1>
+<p>The so called <code>PoC-Framework</code> is a tool we developed to help us quickly testing bugs in smart-contracts.
+Especially for more complicated bugs, it is often easier to verify an idea practically rather than statically by just reading code.</p>
+<p>This is usually a multistep process. First, you obviously do not want to test on the live Solana chain.
+That means you have to replicate the setup locally somehow. If you have ever tried to write integration-tests for smart-contracts before, you'll know that it is a bit annoying to get the correct setup.</p>
+<p>For normal contract usage, you'd have a Rust cli or some web3js that generates instructions and send them via RPC to a validator. On the validator, the contract is already initialized, and your instructions can be executed by the network, returning you the result.</p>
+<p>For testing, it is often times not necessary to have a full network. Just the solana smart-contract runtime is enough to see most behaviour.</p>
+<p>This is where the <code>PoC-Framework</code> comes in. It is a collection of helper methods to interact with the core solana code in a way that is similar to what would happen when a contract is used on the normal network.</p>
+<p>An exploit utilizing the framework consists of three parts: setup code (marked with the comment: &quot;SETUP CODE BELOW&quot;), the actual exploit (the <code>fn hack()</code> function you will write) and a check if the exploit succeeded (the <code>fn verify()</code> function). We have already provided the first and the last one in the poc files for you, just the exploit is missing.</p>
+<p>To see how the Framework can help you, its best to check out the functions provided by the <code>Environment</code>: <a href="https://docs.rs/poc-framework/0.1.2/poc_framework/trait.Environment.html">poc_framework::Environment docs</a></p>
+<h2 id="exploit-outline"><a class="header" href="#exploit-outline">Exploit outline</a></h2>
+<ul>
+<li>hacker is a key with 1 sol for paying fees n stuff.</li>
+<li>GOAL: give this hacker more money than he started with. Does not necessarily have to be all the money, just more.</li>
+<li><code>fn verify()</code> will check this for you automatically, so you know when you have succeeded.</li>
+</ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="setup.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
-                            <a rel="next" href="workshop.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="level0-solution.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -178,8 +180,11 @@ To help make the Ecosystem a more secure place, we want to share what we can in 
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="setup.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
-                    <a rel="next" href="workshop.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="level0-solution.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
